# fast_zero

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  prometheus.yml  pyproject.toml
.github/workflows/: pipeline.yaml
app/: app.py
app/controllers/: todo_controller.py
app/core/: security.py  util.py
app/juridico/: models.py  negociacao_schema.py  router_negociacao.py
app/models/: models.py
app/pessoa/: apis.py  models.py  municipio_schema.py  router_municipio.py
app/routers/: auth.py  permission_role_permission.py  permissions_module.py  permissions_permission.py  permissions_role.py  todos.py  users.py  validate.py
app/schemas/: permissioes_schema.py  schemas.py
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/controllers/: todo_controller.py
fast_zero/core/: database.py  security.py
fast_zero/juridico/: models.py  negociacao_schema.py  router_negociacao.py
fast_zero/models/: models.py
fast_zero/routers/: auth.py  permission_role_permission.py  permissions.py  permissions_module.py  permissions_permission.py  permissions_role.py  todos.py  users.py
fast_zero/schemas/: permissioes_schema.py  schemas.py
frontend/: Dockerfile  Dockerfile copy  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: SideNavbar.tsx
migrations/: README  env.py
nginx/: Dockerfile  default.conf
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
util/: cli.py  gen.py  import_negociacao.py  import_users.py
(+45 files in other folders)
