[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ailton <informatica@fomento.to.gov.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.111.0"
pydantic = {extras = ["email"], version = "^2.8.0"}
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
pyjwt = "^2.8.0"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
python-multipart = "^0.0.9"
psycopg = {extras = ["binary"], version = "^3.2.1"}
email-validator = "^2.2.0"
pyotp = "^2.9.0"
qrcode = "^7.4.2"
pytz = "^2024.1"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
freezegun = "^1.5.1"
testcontainers = "^4.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev app/app.py'
pre_test = 'task lint'
#test = 'pytest -s -x --cov=app -vv'  # para no primeiro teste que falhar
test = 'pytest --cov=app -vv'
post_test = 'coverage html'